--- a/ejercicios de HTMLyCSS/ejercicio2/index.html
+++ b/ejercicios de HTMLyCSS/ejercicio2/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<title>Disposición de elementos en CSS</title>
-	<link rel="stylesheet" type="text/css" href="estilos.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="galeria">
-		<img src="imagen1.jpg">
-		<img src="imagen2.jpg">
-		<img src="imagen3.jpg">
-		<img src="imagen4.jpg">
-		<img src="imagen5.jpg">
-		<img src="imagen6.jpg">
+		<img src="img/imagen1.jpg">
+		<img src="img/imagen2.jpg">
+		<img src="img/imagen3.jpg">
+		<img src="img/imagen4.jpg">
+		<img src="img/imagen5.jpg">
+		<img src="img/imagen6.jpg">
 	</div>
 </body>
 </html>
